--- a/docs/lib/css/cartsStyles.css
+++ b/docs/lib/css/cartsStyles.css
@@ -1,92 +1,124 @@
 body {
-    padding: 0px;
-    margin: 0;
-    background-color: whitesmoke;
-    font-family: 'Karla', sans-serif;
-  }
-  
-  #logo1 {
-    background-color: black;
-    width: 100vw;
-    height: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Karla', sans-serif;
-  }
-  
-  #logo {
-    height: 22vh;
-    width: auto;
-  }
-  
-  table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 50%;
-    margin-left: 10%;
-    margin-top: 20px;
-  }
-  
-  td, th {
-    border: 1px solid black;
-    text-align: center;
-    padding: 8px;
-  }
-  
-  .actions {
-    background-color: whitesmoke;
-    border: none;
-    padding: 10px;
-    width: 5%;
-  }
-  
-  #logo1 {
-    background-image: linear-gradient(rgb(156, 163, 233), rgb(60, 74, 212));
-    width: 100vw;
-    height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Karla', sans-serif;
-  }
-  
+  padding: 0px;
+  margin: 0;
+  background-color: whitesmoke;
+  font-family: 'Karla', sans-serif;
+}
+
+#logo1 {
+  background-color: black;
+  width: 100vw;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Karla', sans-serif;
+}
+
+#logo {
+  height: 22vh;
+  width: auto;
+}
+
+#actionButtons {
+  display: flex;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 67%;
+  margin-left: 18%;
+  margin-top: 20px;
+}
+
+td, th {
+  border: 1px solid black;
+  text-align: center;
+  padding: 8px;
+}
+
+.actions {
+  background-color: whitesmoke;
+  border: none;
+  padding: 10px;
+  width: 5%;
+}
+
+#logo1 {
+  background-image: linear-gradient(rgb(156, 163, 233), rgb(60, 74, 212));
+  width: 100vw;
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Karla', sans-serif;
+}
+
+.headerText {
+  color: white;
+  font-family: 'Oxygen', sans-serif;
+  font-size: 50px;
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 10px rgb(0, 0, 0);
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+#searchBar {
+  margin-top: 20px;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#cartSearch {
+  margin: 0
+}
+
+#cartSearch {
+  padding: 5px;
+  font-size: 2em;
+  line-height: 30px
+}
+
+#submitSearch {
+  margin-left: 10px;
+  display: block;
+  background-color: white;
+  border: none;
+  box-shadow: 1px 1px 5px rgb(0, 0, 0);
+}
+
+#searchBar {
+  margin-left: 175px;
+}
+
+#addButton {
+  margin-top: 30px;
+  margin-left: 40px;
+  height: 30px;
+}
+
+#removeAllItems {
+  margin-top: 30px;
+  margin-left: 40px;
+  height: 30px;
+}
+
+#addFile {
+  margin-top: 34px;
+  margin-left: 40px;
+}
+
+#manageItemsButton {
+  margin-top: 34px;
+  margin-left: -45px;
+}
+
+@media (max-width: 950px) {
   .headerText {
-    color: white;
-    font-family: 'Oxygen', sans-serif;
-    font-size: 50px;
-    letter-spacing: 2px;
-    text-shadow: 2px 2px 10px rgb(0, 0, 0);
-    margin-left: 1vw;
-    margin-right: 1vw;
+    display: none;
   }
-  
-  #searchBar {
-    margin-top: 20px;
-    display: flex;
-    flex-flow: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  #cartSearch{ 
-    margin: 0 
-  }
-  #cartSearch { 
-    padding: 5px; 
-    font-size: 2em; 
-    line-height: 30px 
-  }
-  #submitSearch {
-    margin-left: 10px;
-    display: block;
-    background-color: white;
-    border: none;
-    box-shadow: 1px 1px 5px rgb(0,0,0);
-  }
-  
-  @media (max-width: 950px) {
-    .headerText {
-      display: none;
-    }
-  }
+}
