--- a/docs/lib/css/landingStyles.css
+++ b/docs/lib/css/landingStyles.css
@@ -24,7 +24,14 @@ body {
   display: flex;
 }
 
-
+.managementButton {
+  border-radius: 5px;
+  border: rgb(101, 101, 250) solid;
+  background-color: rgb(101, 101, 250);
+  font-family: 'Karla', sans-serif;
+  color: white;
+  box-shadow: 1px 1px 3px rgb(0,0,0);
+}
 
 table {
   font-family: arial, sans-serif;
@@ -73,7 +80,7 @@ td, th {
   flex-flow: row;
   justify-content: center;
   align-items: center;
-  margin-left: 175px;
+  margin-left: 250px;
 }
 
 #addButton {
@@ -94,8 +101,9 @@ td, th {
 }
 
 #manageCartsButton {
-  margin-top: 34px;
-  margin-left: -45px;
+  margin-top: 30px;
+  margin-left: 45px;
+  height: 30px;
 }
 
 #productSearch{ 
@@ -114,6 +122,16 @@ td, th {
   background-color: white;
   border: none;
   box-shadow: 1px 1px 5px rgb(0,0,0);
+}
+
+#addFile {
+  display: none;
+}
+
+#addFileButton{
+  height: 30px;
+  margin-top: 30px;
+  margin-left: 40px;
 }
 
 @media (max-width: 950px) {
