--- a/docs/lib/css/landingStyles.css
+++ b/docs/lib/css/landingStyles.css
@@ -30,7 +30,7 @@ body {
   background-color: rgb(101, 101, 250);
   font-family: 'Karla', sans-serif;
   color: white;
-  box-shadow: 1px 1px 3px rgb(0,0,0);
+  box-shadow: 1px 1px 3px rgb(0, 0, 0);
 }
 
 table {
@@ -106,14 +106,14 @@ td, th {
   height: 30px;
 }
 
-#productSearch{ 
-  margin: 0 
+#productSearch {
+  margin: 0
 }
 
-#productSearch { 
-  padding: 5px; 
-  font-size: 2em; 
-  line-height: 30px 
+#productSearch {
+  padding: 5px;
+  font-size: 2em;
+  line-height: 30px
 }
 
 #submitSearch {
@@ -121,17 +121,36 @@ td, th {
   display: block;
   background-color: white;
   border: none;
-  box-shadow: 1px 1px 5px rgb(0,0,0);
+  box-shadow: 1px 1px 5px rgb(0, 0, 0);
 }
 
 #addFile {
   display: none;
 }
 
-#addFileButton{
+#addFileButton {
   height: 30px;
   margin-top: 30px;
   margin-left: 40px;
+}
+
+#gear {
+  margin-top: 18px;
+  margin-left: 200px;
+  -webkit-transition-duration: 0.8s;
+  -moz-transition-duration: 0.8s;
+  -o-transition-duration: 0.8s;
+  transition-duration: 0.8s;
+  -webkit-transition-property: -webkit-transform;
+  -moz-transition-property: -moz-transform;
+  -o-transition-property: -o-transform;
+  transition-property: transform;
+  overflow: hidden;
+}
+
+#gear:hover {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 @media (max-width: 950px) {
