--- a/Simple Shopping/Simple Shopping/Base.lproj/Main.storyboard
+++ b/Simple Shopping/Simple Shopping/Base.lproj/Main.storyboard
@@ -140,7 +140,7 @@
             </objects>
             <point key="canvasLocation" x="150.72463768115944" y="867.85714285714278"/>
         </scene>
-        <!--Bluetooth Serial-->
+        <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="WelcomeViewController" customModule="Simple_Shopping" customModuleProvider="target" sceneMemberID="viewController">
@@ -167,19 +167,11 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Bluetooth Serial" id="0uS-CY-U7f">
-                        <barButtonItem key="leftBarButtonItem" title="Connect" id="F8L-Yk-OfI">
-                            <connections>
-                                <action selector="barButtonPressed:" destination="BYZ-38-t0r" id="1GC-2O-4Yh"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Home" id="0uS-CY-U7f"/>
                     <connections>
                         <outlet property="ShopBtn" destination="hnZ-ed-Uqw" id="Uxh-nS-FuK"/>
                         <outlet property="Welcome" destination="BFV-Yc-BzB" id="fBl-lX-zXe"/>
-                        <outlet property="barButton" destination="F8L-Yk-OfI" id="E9b-eA-7c1"/>
                         <outlet property="navItem" destination="0uS-CY-U7f" id="KWD-mB-cMB"/>
-                        <segue destination="veK-I1-lG2" kind="show" identifier="ShowScanner" id="0gg-67-amx"/>
                         <segue destination="X9b-hW-2Cf" kind="show" identifier="Shop" id="jcg-Ne-c4N"/>
                         <segue destination="gkX-5w-71f" kind="show" identifier="ShopNoList" id="jVq-ze-jJD"/>
                     </connections>
@@ -298,31 +290,51 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Title" id="3Fm-69-Jm5">
-                        <barButtonItem key="rightBarButtonItem" title="Pay" id="Bce-de-LBO">
-                            <connections>
-                                <segue destination="4sd-wa-oPf" kind="show" id="Xt2-F8-4yj"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Pay" id="BUh-OT-7IB">
+                                <connections>
+                                    <action selector="PayBtn:" destination="gkX-5w-71f" id="oCX-6t-oS6"/>
+                                    <segue destination="4sd-wa-oPf" kind="show" id="LIe-4K-ON9"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Connect" id="hSL-he-a5G">
+                                <connections>
+                                    <action selector="Connect:" destination="gkX-5w-71f" id="PM4-gV-5Oh"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="ConnectBtn" destination="hSL-he-a5G" id="Gxw-d0-cqF"/>
+                        <outlet property="PriceLabel" destination="Evr-Aw-ECX" id="wx0-ih-Iqm"/>
+                        <outlet property="TitleLabel" destination="3Fm-69-Jm5" id="88Y-Li-Icj"/>
+                        <segue destination="veK-I1-lG2" kind="show" identifier="ShowScanner" id="FeM-F2-gRb"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0xt-Jb-wnm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4494" y="810"/>
+            <point key="canvasLocation" x="4458" y="810"/>
         </scene>
-        <!--Payment View Controller-->
+        <!--Pay View Controller-->
         <scene sceneID="qcc-99-hBF">
             <objects>
-                <viewController id="4sd-wa-oPf" customClass="PaymentViewController" customModule="Simple_Shopping" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tf6-bj-3yO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="4sd-wa-oPf" customClass="PayViewController" customModule="Simple_Shopping" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XpQ-Df-6s0">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_3174.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="bRq-1Y-sxr">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="m3K-Mr-n3I"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Tf6-bj-3yO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5303" y="810"/>
+            <point key="canvasLocation" x="5302.898550724638" y="809.59821428571422"/>
         </scene>
         <!--Title-->
         <scene sceneID="ih2-zN-OGb">
@@ -434,17 +446,17 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Bluetooth Speaker" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7YZ-Gx-mwz">
-                                                    <rect key="frame" x="20" y="11" width="149" height="38"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Connect" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENz-DF-MnF">
-                                                    <rect key="frame" x="290" y="-5" width="124" height="38"/>
+                                                    <rect key="frame" x="290" y="2" width="124" height="38"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Bluetooth Speaker" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7YZ-Gx-mwz">
+                                                    <rect key="frame" x="20" y="2" width="149" height="38"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -518,7 +530,6 @@
                     <connections>
                         <segue destination="XKL-1S-V7F" kind="relationship" relationship="viewControllers" id="kyo-Dn-fw0"/>
                         <segue destination="xdi-c4-vZH" kind="relationship" relationship="viewControllers" id="MXY-Sz-sPl"/>
-                        <segue destination="EVt-ka-pgu" kind="relationship" relationship="viewControllers" id="fBP-Jo-uLd"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jwS-cK-mxg" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -580,6 +591,9 @@
             <point key="canvasLocation" x="1948" y="-680"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="IMG_3174.jpg" width="828" height="1470"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="TuC-B7-fiy"/>
         <segue reference="ZP2-3H-cxs"/>
